Add Google AdSense

--- a/pelican/themes/notmyidea/templates/article.html
+++ b/pelican/themes/notmyidea/templates/article.html
@@ -11,6 +11,17 @@
     </header>
 
     <div class="entry-content">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- rockpesado.com.br responsive -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-1425526800515363"
+           data-ad-slot="1096855105"
+           data-ad-format="auto"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+
       {% include 'article_infos.html' %}
       {{ article.content }}
     </div><!-- /.entry-content -->
